# VerticalFrame

./: CMakeLists.txt  README.md  lendingclub.cpp
include/: NetImplementation.h  SBR_MOF.h  gradComputation.h  modelCreation.h  paillier_ant.h  paillier_base.h  paillier_djn.h  paillier_opt.h  readCSV.h  readLimb.h  readMnist.h  util.h
src/: NetImplementation.cpp  SBR_MOF.cpp  gradComputation.cpp  paillier_ant.cpp  paillier_base.cpp  paillier_djn.cpp  paillier_opt.cpp  readCSV.cpp  readLimb.cpp  readMnist.cpp  util.cpp
